[project]
name = "comfyui-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.10",
    "einops>=0.8.0",
    "fastapi>=0.115.2",
    "kornia>=0.7.1",
    "pillow>=11.0.0",
    "psutil>=6.0.0",
    "pyyaml>=6.0.2",
    "ruff>=0.6.9",
    "safetensors>=0.4.2",
    "scipy>=1.14.1",
    "sentencepiece>=0.2.0",
    "soundfile>=0.12.1",
    "spandrel>=0.4.0",
    "tokenizers>=0.13.3",
    "torch",
    "torchaudio",
    "torchsde>=0.2.6",
    "torchvision",
    "tqdm>=4.66.5",
    "transformers>=4.28.1",
    "uvicorn>=0.32.0",
]

[tool.ruff.lint]
# On top of the default `select` (`E4`, E7`, `E9`, and `F`), enable flake8-bugbear (`B`) and flake8-quotes (`Q`).
extend-select = ["I", "B", "Q"]
